--- a/Astral Cycle/Astral Cycle.csproj
+++ b/Astral Cycle/Astral Cycle.csproj
@@ -42,6 +42,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Classes\AstronomicalObject.cs" />
+    <Compile Include="Classes\Star.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
