--- a/Astral Cycle/Astral Cycle.csproj
+++ b/Astral Cycle/Astral Cycle.csproj
@@ -42,14 +42,14 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Classes\AstronomicalObject.cs" />
-    <Compile Include="Classes\Star.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Code\Entities\Animal.cs" />
+    <Compile Include="src\Code\Entities\AstronomicalObject.cs" />
     <Compile Include="src\Code\Entities\Organism.cs" />
     <Compile Include="src\Code\Entities\Plant.cs" />
+    <Compile Include="src\Code\Entities\Star.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
