--- a/Astral Cycle/Astral Cycle.csproj
+++ b/Astral Cycle/Astral Cycle.csproj
@@ -48,6 +48,7 @@
     <Compile Include="src\Code\Entities\Animal.cs" />
     <Compile Include="src\Code\Entities\AstronomicalObject.cs" />
     <Compile Include="src\Code\Entities\Organism.cs" />
+    <Compile Include="src\Code\Entities\Planet.cs" />
     <Compile Include="src\Code\Entities\Plant.cs" />
     <Compile Include="src\Code\Entities\Star.cs" />
   </ItemGroup>
