--- a/Astral Cycle/Astral Cycle.csproj
+++ b/Astral Cycle/Astral Cycle.csproj
@@ -51,6 +51,7 @@
     <Compile Include="src\Code\Entities\Planet.cs" />
     <Compile Include="src\Code\Entities\Plant.cs" />
     <Compile Include="src\Code\Entities\Star.cs" />
+    <Compile Include="src\Code\Generator\Generator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -111,9 +112,7 @@
     </None>
     <None Include="app.manifest" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="src\Code\NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
